# beacon

./: .gitignore  Cargo.toml  LICENSE
crates/beacon-adjoint-table/: Cargo.toml
crates/beacon-adjoint-table/src/: lib.rs
crates/beacon-bench/: Cargo.toml
crates/beacon-bench/src/: main.rs
crates/beacon-core/: Cargo.toml
crates/beacon-core/src/: arena.rs  dtype.rs  lib.rs  saved.rs  shape.rs  storage.rs  tensor.rs
crates/beacon-cuda/: Cargo.toml
crates/beacon-cuda/src/: attention.rs  device.rs  elementwise.rs  error.rs  launch.rs  launcher.rs  lib.rs  matmul.rs  mlp.rs  norm.rs  runtime.rs  testutil.rs
crates/beacon-macros/: Cargo.toml
crates/beacon-macros/src/: lib.rs  ops.rs  resolve.rs  signature.rs  validate.rs
crates/beacon-macros/tests/: parse_ok.rs  resolve_ok.rs
crates/beacon-macros/tests/compile_fail/: unregistered_op.rs  unregistered_op.stderr  unregistered_op_second.rs  unregistered_op_second.stderr
crates/beacon-nn/: Cargo.toml
crates/beacon-ops/: Cargo.toml
crates/beacon-train/: Cargo.toml
