[package]
name = "beacon-cuda"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "CUDA layer: nvcc->PTX build, cudarc device/stream/arena, typed launchers, cublasLt fp8"

[features]
default = []
cuda = []

[dependencies]
beacon-core = { workspace = true }
