[package]
name = "beacon-macros"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "#[differentiable] proc macro: compile-time forward/backward generation"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.106"
quote = "1.0.46"
syn = { version = "2.0.118", features = ["full"] }
