[package]
name = "beacon-nn"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Transformer layers and the GPT2 const-generic model; #[differentiable] forward"

[features]
default = []
cuda = ["beacon-ops/cuda"]

[dependencies]
beacon-core = { workspace = true }
beacon-ops = { workspace = true }
